Fix links on mobileNavbar

--- a/src/components/pages/Map/Map.module.css
+++ b/src/components/pages/Map/Map.module.css
@@ -24,7 +24,7 @@
 
 .search {
   height: 40px;
-  width: 400px;
+  width: 380px;
   margin: 0.2em;
   padding-inline: 10px;
   text-align: center;
@@ -37,7 +37,7 @@
 
 .combobox_input {
   height: 40px;
-  width: 400px;
+  width: 380px;
   margin: 0.2em;
   padding-inline: 10px;
   text-align: center;
